--- a/source/components/wi-button/wi-button.less
+++ b/source/components/wi-button/wi-button.less
@@ -61,3 +61,16 @@ wi-button, wi-toolbar-button {
     padding: 5px;
 }
 
+.button-checkbox {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+}
+
+.checked-off {
+    color: #ccc;
+}
+
+.checked-on {
+    color: black;
+}
