--- a/source/components/wi-button/wi-button.html
+++ b/source/components/wi-button/wi-button.html
@@ -1,13 +1,20 @@
 <div>
-    <button ng-if='wiButton.separator != "1"' ng-click="wiButton.onClick()"
+    <button ng-if='wiButton.separator != "1"' ng-click="wiButton.onClick();"
             class="button-{{wiButton.type || wiButton.config.type || wiButton.default.type}}"
             data-toggle="tooltip" data-placement="bottom" title="{{wiButton.tooltip || wiButton.config.tooltip || wiButton.default.tooltip}}"
             ng-disabled='wiButton.isDisabled()'
             wi-element-ready="wiButton.initTooltip() ">
-        <span ng-if="wiButton.icon" class="{{wiButton.icon || wiButton.config.icon || wiButton.default.icon}}"></span>
+        <span ng-if="!wiButton.isCheckType && wiButton.icon" class="{{wiButton.icon || wiButton.config.icon || wiButton.default.icon}}"></span>
+        <span ng-if="wiButton.isCheckType && !wiButton.icon" class="ti-check button-checkbox checked-off" ng-class="{'checked-on':wiButton.checked}"></span>
         <p class="{{wiButton.layout || wiButton.config.layout || wiButton.default.layout}}"
         ng-show="wiButton.label != null || wiButton.config.label != null">
             {{wiButton.label || wiButton.config.label || wiButton.default.label}}</p>
     </button>
     <div ng-if='wiButton.separator == "1"' class='separator'></div>
 </div>
+
+<!-- <label class="{{wiButton.layout || wiButton.config.layout || wiButton.default.layout}}"
+ng-show="wiButton.label != null || wiButton.config.label != null">
+<input type="checkbox" ng-checked="wiButton.checked">
+<span>{{wiButton.label || wiButton.config.label || wiButton.default.label}}</span>
+</label> -->
