add checkbox attr to contextmenu

--- a/source/components/wi-context-menu/wi-context-menu.html
+++ b/source/components/wi-context-menu/wi-context-menu.html
@@ -10,6 +10,8 @@
                    layout='icon-left'
                    label='{{button.label}}'
                    type='small'
+                   is-check-type='button.isCheckType'
+                   checked='button.checked'
                    handler="button.handler"
                    separator='{{button.separator}}'
                    ng-mouseenter='wiContextMenu.onMouseEnterButton(button, $event, $index)'
