--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -1,2 +1,5 @@
-<div wi-right-click='wiD3Histogram.showContextMenu($event)' id='{{wiD3Histogram.histogramAreaId}}' class='d3-histogram-region'>
+<div wi-right-click='wiD3Histogram.showContextMenu($event)' style="border: 1px solid black">
+    <h2>Histogram {{wiD3Histogram.curveName}}</h2>
+    <h5>Subtitle {{wiD3Histogram.refCurveUnit}}</h5>
+    <div id='{{wiD3Histogram.histogramAreaId}}' class='d3-histogram-region' style="border: 1px solid blue"></div>
 </div>
