update histogram config,main,util,handler

--- a/source/components/wi-context-menu/wi-context-menu.html
+++ b/source/components/wi-context-menu/wi-context-menu.html
@@ -5,6 +5,7 @@
          style="top:{{contextMenu.top}}px; left:{{contextMenu.left}}px;min-width: 200px">
         <wi-button ng-repeat='button in contextMenu.buttons track by $index'
                    name='{{contextMenu.name + "." + button.name}}'
+                   index='$index'
                    icon='{{button.icon}}'
                    class='{{button.class}}'
                    layout='icon-left'
