working on shading properties

--- a/source/less/main.less
+++ b/source/less/main.less
@@ -273,6 +273,9 @@ input[type].display-none {
 .margin-left-0_5em {
     margin-left: 0.5em;
 }
+.margin-bottom-0 {
+    margin-bottom: 0;
+}
 .padding-right-0_5em {
     padding-right: 0.5em;
 }
@@ -287,6 +290,9 @@ input[type].display-none {
 }
 .padding-bottom-2em {
 	padding-bottom: 2em;
+}
+.padding-bottom-1em {
+    padding-bottom: 1em;
 }
 .padding-2em {
 	padding: 2em;
@@ -341,4 +347,7 @@ input[type].display-none {
 }
 .padding-left-2em {
     padding-left: 2em;
+}
+.padding-left-1em {
+    padding-left: 1em;
 }
