--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -1,10 +1,23 @@
-<div wi-right-click='wiD3Histogram.showContextMenu($event)' style="border: 1px solid black">
-    <h4>Histogram: {{wiD3Histogram.histogramModel.properties.histogramTitle}}</h4>
-    <h5 ng-show="!wiD3Histogram.histogramModel.properties.idZoneSet">
-        Reference({{wiD3Histogram.curveModel.properties.unit}}): [{{wiD3Histogram.histogramModel.properties.intervalDepthTop}} - {{wiD3Histogram.histogramModel.properties.intervalDepthBottom}}]
-    </h5>
-    <h5 ng-show="wiD3Histogram.histogramModel.properties.idZoneSet">
-        Filter: [{{wiD3Histogram.zoneSetModel.properties.name}} - Zonation]
-    </h5>
-    <div id='{{wiD3Histogram.histogramAreaId}}' class='d3-histogram-region' style="border: 1px solid blue"></div>
+<div style="display:flex; flex-direction:row">
+    <wi-resizable-x width="80" min-width="50" resize-right="true">
+        zone area
+    </wi-resizable-x>
+    <div style='flex:1; display: flex;flex-direction:column;'>
+        <div wi-right-click='wiD3Histogram.showContextMenu($event)' style="flex:1;display:flex;flex-direction:column;">
+            <h4>Histogram: {{wiD3Histogram.histogramModel.properties.histogramTitle}}</h4>
+            <h5 ng-show="!wiD3Histogram.histogramModel.properties.idZoneSet">
+                Reference({{wiD3Histogram.curveModel.properties.unit}}): [{{wiD3Histogram.histogramModel.properties.intervalDepthTop}} - {{wiD3Histogram.histogramModel.properties.intervalDepthBottom}}]
+            </h5>
+            <h5 ng-show="wiD3Histogram.histogramModel.properties.idZoneSet">
+                Filter: [{{wiD3Histogram.zoneSetModel.properties.name}} - Zonation]
+            </h5>
+            <div id='{{wiD3Histogram.histogramAreaId}}' wi-element-ready='wiD3Histogram.onReady()' class='d3-histogram-region' style="border: 1px solid blue; flex:1;"></div>
+        </div>
+        <div class="statistic-pane">
+            statistic pane
+        </div>
+    </div>
+    <wi-resizable-x width="150" min-width="100" resize-left="true">
+        reference window
+    </wi-resizable-x>
 </div>
