--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -76,3 +76,13 @@
         }
     }
 }
+
+.vi-histogram-container {
+    flex: 1;
+    position: relative;
+    .vi-histogram-svg {
+        width: 100%;
+        height: 100%;
+        background-color: yellow;
+    }
+}
