--- a/source/less/main.less
+++ b/source/less/main.less
@@ -128,7 +128,9 @@ label.flex-row {
 .height65 button{
     height: 60px;
 }
-
+.height-20px {
+    height: 20px;
+}
 .height-auto{
     width: 100%;
     button{
@@ -150,7 +152,12 @@ label.flex-row {
 .width-95-percent {
     width: 95%;
 }
-
+.width-85-percent {
+    width: 85%;
+}
+.width-15-percent {
+    width: 15%;
+}
 .width-290{
     width: 290px;    
 }
