--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -81,8 +81,7 @@
     flex: 1;
     position: relative;
     .vi-histogram-svg {
-        width: 100%;
-        height: 100%;
+        border: 1px solid blue;
         background-color: yellow;
     }
 }
