--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -1,5 +1,5 @@
 <div style="display:flex; flex-direction:row">
-    <wi-resizable-x width="80" min-width="50" resize-right="true">
+    <wi-resizable-x width="80" min-width="50" resize-right="true" ng-show="wiD3Histogram.isShowWiZone">
             <wi-zone name="{{wiD3Histogram.getZoneName();}}" zones="wiD3Histogram.zoneArr" active-zone="wiD3Histogram.histogramModel.properties.activeZone" all-zone-handler="wiD3Histogram.AllZoneClick" active-zone-handler="wiD3Histogram.ActiveZoneClick"></wi-zone>
     </wi-resizable-x>
     <div style='flex:1; display: flex;flex-direction:column;'>
@@ -17,7 +17,7 @@
             statistic pane
         </div>
     </div>
-    <wi-resizable-x width="150" min-width="100" resize-left="true">
+    <wi-resizable-x width="150" min-width="100" resize-left="true" ng-show="wiD3Histogram.isShowReferenceWindow">
         reference window
     </wi-resizable-x>
 </div>
