--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -13,9 +13,11 @@
             <h5 ng-show="wiD3Histogram.histogramModel.properties.idZoneSet">
                 Filter: [{{wiD3Histogram.zoneSetModel.properties.name}} - Zonation]
             </h5>
-            <div id='{{wiD3Histogram.histogramAreaId}}' wi-element-ready='wiD3Histogram.onReady()' class='d3-histogram-region' style="border: 1px solid blue; flex:1;"></div>
+            <div>{{wiD3Histogram.histogramModel.properties.plotType}}</div>
+            <div id='{{wiD3Histogram.histogramAreaId}}' wi-element-ready='wiD3Histogram.onReady()' class='d3-histogram-region' style="flex:1"></div>
+            <div class='text-center'>{{wiD3Histogram.histogramModel.properties.xLabel}}</div>
         </div>
-        <div resizable r-directions="['top']" r-flex="true" style="background-color: green; height:50%; max-height:70%; min-height:10%;margin-top:14px">
+        <div resizable r-directions="['top']" r-flex="true" style="max-height:70%; min-height:10%">
             <h2 style="text-align: center;margin:0">
                 statistic pane
             </h2>
