--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -87,7 +87,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        padding: 20px 40px;
+        padding: 10px 5px 20px 50px;
         //background-color: yellow;
     }
 }
