add simple-statistics & doStatistics histogram

--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -53,43 +53,43 @@
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>Number Of Values:</label></div>
-                        <div class="col-sm-3">4169</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getLength()}}</div>
                         <div class="col-sm-3 text-right"><label>Min Value:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getMin()}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>Max Value:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getMax()}}</div>
                         <div class="col-sm-3 text-right"><label>Average:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getAverage()}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>Average Deviation:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getAverageDeviation()}}</div>
                         <div class="col-sm-3 text-right"><label>Standard Deviation:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getStandardDeviation()}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>Variance:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getVariance()}}</div>
                         <div class="col-sm-3 text-right"><label>Skewness:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getSkewness()}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>Kurtosis:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getKurtosis()}}</div>
                         <div class="col-sm-3 text-right"><label>Median:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getMedian()}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>P10:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getPercentile(0.1)}}</div>
                         <div class="col-sm-3 text-right"><label>P50:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getPercentile(0.5)}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>P90:</label></div>
-                        <div class="col-sm-3">99</div>
+                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getPercentile(0.9)}}</div>
                         <div class="col-sm-3"></div>
                         <div class="col-sm-3"></div>
                     </div>
