--- a/source/less/main.less
+++ b/source/less/main.less
@@ -283,6 +283,9 @@ input[type].display-none {
 .margin-bottom-0 {
     margin-bottom: 0;
 }
+.margin-tb-5px {
+    margin: 5px 0;
+}
 .padding-right-0_5em {
     padding-right: 0.5em;
 }
