--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -28,7 +28,7 @@
             <h5 class='text-left statistic-header'>
                 <label>Statistics</label>
             </h5>
-            <div class="scroll-content">
+            <div class="scroll-content" ng-show="wiD3Histogram.histogramModel.properties.idCurve">
                 <div>
                     <div class="row">
                         <div class="col-sm-3"><label>Variables</label></div>
@@ -53,43 +53,43 @@
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>Number Of Values:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getLength()}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.length}}</div>
                         <div class="col-sm-3 text-right"><label>Min Value:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getMin()}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.min}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>Max Value:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getMax()}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.max}}</div>
                         <div class="col-sm-3 text-right"><label>Average:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getAverage()}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.avg}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>Average Deviation:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getAverageDeviation()}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.avg_dev}}</div>
                         <div class="col-sm-3 text-right"><label>Standard Deviation:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getStandardDeviation()}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.std_dev}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>Variance:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getVariance()}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.var}}</div>
                         <div class="col-sm-3 text-right"><label>Skewness:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getSkewness()}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.skew}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>Kurtosis:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getKurtosis()}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.kur}}</div>
                         <div class="col-sm-3 text-right"><label>Median:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getMedian()}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.med}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>P10:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getPercentile(0.1)}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.p10}}</div>
                         <div class="col-sm-3 text-right"><label>P50:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getPercentile(0.5)}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.p50}}</div>
                     </div>
                     <div class="row wi-small text-color-lightgray">
                         <div class="col-sm-3 text-right"><label>P90:</label></div>
-                        <div class="col-sm-3">{{wiD3Histogram.visHistogram.getPercentile(0.9)}}</div>
+                        <div class="col-sm-3">{{wiD3Histogram.statistics.p90}}</div>
                         <div class="col-sm-3"></div>
                         <div class="col-sm-3"></div>
                     </div>
